<resources>
    <string name="app_name">You Track Mobile App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="service_name">Tracker</string>
</resources>
